--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 
 <body>
   <p>Classes are like blueprints for an object</p>
+
+  <h3>template</h3>
+  <div class="col-3">
+    <div class="card">
+      <img class="card-img-top" src="//placehold.it/200x200" alt='Card iamge cap'>
+      <div class="card-body">
+        <i class="far fa-trash-alt delete"></i>
+        <h4 class="card-title">title</h4>
+        <p class="card-text">discription</p>
+        <p class="card-text">rarity</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
